# bloodhound_gang

./: .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  run.sh
conf/: hosts.yaml  queues.yaml  tasks.yaml  user_commands.yaml
conf/nextflow/: nxf_csp.config
doc/: README.md
grafana/dashboards/: overview.json
host_dir/data_other/: tasks.csv
prometheus/: prometheus.yml
src/: bloodhound_gang.py  constants.py
src/bloodhound_gang/: __init__.py  bloodhound_gang.py  constants.py  test.py
src/bloodhound_gang/classes/data/: __init__.py  result_union.py  source.py
src/bloodhound_gang/classes/objects/: batch.py  process.py  queue.py  sample.py  task.py  taskload.py
src/bloodhound_gang/classes/watchdogs/: watchdog_basic.py  watchdog_metrics.py  watchdog_processing.py  watchdog_source.py
src/bloodhound_gang/modules/: cli_executor_ssh copy.py  cli_executor_ssh.py  db_async.py  logger.py  utils.py
src/bloodhound_gang/scripts/config_scripts/: generate_yaml_task.py
src/bloodhound_gang/tasks/basecalling_basic/: nxf_basecalling.config  process_factory.py  result.py  result_factory.py
src/bloodhound_gang/useful_scripts/: merge_py_files.py
src/classes/data/: result_union.py
src/classes/objects/: queue.py  task.py
src/classes/watchdogs/: watchdog_metrics.py  watchdog_source.py
src/modules/: cli_executor_ssh.py  utils.py
src/tasks/: utils.py
src/tasks/basecalling_basic/: process_factory.py
tests/: .env.test  wd_processing_tests.md  wd_source_tests.md
tests/conf/: tasks.csv  tasks.yaml
(+5 files in other folders)
